--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   http: ^1.2.0
   cupertino_icons: ^1.0.6
   flutter_lints: ^3.0.1
+  path_provider: ^2.1.2
+  sqflite: ^2.3.1
+  path: ^1.8.3
   
 
 dev_dependencies:
