--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   path_provider: ^2.1.2
   sqflite: ^2.3.1
   path: ^1.8.3
+  flutter_wallpaper_manager: ^0.0.4
+  async_wallpaper: ^2.0.3
+  fluttertoast: ^8.2.4
   
 
 dev_dependencies:
@@ -27,5 +30,4 @@ dev_dependencies:
 
 
 flutter:
-
   uses-material-design: true
