--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,8 @@ dependencies:
   path: ^1.8.3
   flutter_wallpaper_manager: ^0.0.4
   async_wallpaper: ^2.0.3
-  fluttertoast: ^8.2.4
-  bitmap: ^0.2.0
+  # fluttertoast: ^8.2.4
+  # bitmap: ^0.2.0
   
 
 dev_dependencies:
