--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_wallpaper_manager: ^0.0.4
   async_wallpaper: ^2.0.3
   uuid: ^4.3.3
+  fluttertoast: ^8.2.4
   # fluttertoast: ^8.2.4
   # bitmap: ^0.2.0
   
